minimal-api-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minimal-front-service
  namespace: default
spec:
  selector:
    app: minimal-front # Encontra os pods criados pelo Deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
